@@ -95,6 +95,7 @@ of the terms used in their descriptions available.
 <LI><A HREF="core.html#directorymatch">&lt;DirectoryMatch&gt;</A>
 <LI><A HREF="mod_dir.html#directoryindex">DirectoryIndex</A>
 <LI><A HREF="core.html#documentroot">DocumentRoot</A>
+<LI><A HREF="core.html#documentrootcheck">DocumentRootCheck</A>
 <LI><A HREF="core.html#errordocument">ErrorDocument</A>
 <LI><A HREF="core.html#errorlog">ErrorLog</A>
 <LI><A HREF="mod_example.html#example">Example</A>
