@@ -67,6 +67,7 @@ extern "C" {
  */
 
 extern int ap_standalone;
+extern int ap_documentroot_check;
 extern uid_t ap_user_id;
 extern char *ap_user_name;
 extern gid_t ap_group_id;
