@@ -230,6 +230,7 @@ void *ap_dummy_mutex = &ap_dummy_mutex;
  */
 
 int ap_standalone=0;
+int ap_documentroot_check=1;
 uid_t ap_user_id=0;
 char *ap_user_name=NULL;
 gid_t ap_group_id=0;
